--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "pengmingjiu",
   "license": "ISC",
   "peerDependencies": {
-    "react": "^16.8.3 || ^17",
+    "react": "^16.8 || ^17",
     "react-router-dom": "^5"
   },
   "peerDependenciesMeta": {
@@ -32,12 +32,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
-    "rollup": "^2.52.8",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0"
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
+    "rollup": "^2.52.8"
   }
 }
