--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A component to simplify the configuration of react-router-dom, like the configuration of vue-router",
   "module": "build/index.esm.js",
   "main": "build/index.cjs.js",
+  "typings": "index.d.ts",
   "scripts": {
     "build": "rollup -c"
   },
@@ -39,6 +40,7 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
+    "@types/react": "^17.0.14",
     "rollup": "^2.52.8"
   }
 }
