--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-control",
-  "version": "1.1.0",
+  "version": "1.0.5",
   "description": "A component to simplify the configuration of react-router-dom, like the configuration of vue-router",
   "module": "build/index.esm.js",
   "main": "build/index.cjs.js",
@@ -13,7 +13,8 @@
     "README.md"
   ],
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "push": "npm run build & npm publish"
   },
   "repository": {
     "type": "git",
