--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-control",
-  "version": "1.2.0",
+  "version": "1.1.2",
   "description": "A component to simplify the configuration of react-router-dom, like the configuration of vue-router",
   "module": "build/index.esm.js",
   "main": "build/index.cjs.js",
@@ -29,10 +29,10 @@
     "router-control"
   ],
   "author": "pengmingjiu",
-  "license": "ISC",
+  "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8 || ^17",
-    "react-router-dom": "^5"
+    "react": ">=16.8",
+    "react-router-dom": ">=5"
   },
   "peerDependenciesMeta": {
     "react-dom": {
