--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A component to simplify the configuration of react-router-dom, like the configuration of vue-router",
   "module": "build/index.esm.js",
   "main": "build/index.cjs.js",
-  "typings": "index.d.ts",
+  "types": "index.d.ts",
   "files": [
     "build",
     "index.d.ts",
@@ -13,6 +13,7 @@
     "README.md"
   ],
   "scripts": {
+    "test": "jest",
     "build": "rollup -c",
     "push": "npm run build & npm publish"
   },
@@ -48,7 +49,17 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/react": "^17.0.14",
-    "rollup": "^2.52.8"
+    "@types/react-router-dom": "^5.1.8",
+    "jest": "^27.0.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "rollup": "^2.52.8",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
   }
 }
