--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   ],
   "scripts": {
     "test": "jest",
+    "lint": "eslint src --ext .ts,.tsx,.js",
+    "lint-fix": "eslint --fix src --ext .ts,.tsx,.js",
     "build": "rollup -c",
     "push": "npm run build & npm publish"
   },
@@ -53,7 +55,13 @@
     "@testing-library/react": "^12.0.0",
     "@types/react": "^17.0.14",
     "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -61,5 +69,6 @@
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
-  }
+  },
+  "dependencies": {}
 }
